test/classes/initializers/cond-only-then-1.good
cond-only-then-1.chpl:16: In initializer:
cond-only-then-1.chpl:19: error: Both arms of a conditional must use 'this.init()' or 'init this' in phase 1
